--- a/css/style.css
+++ b/css/style.css
@@ -506,7 +506,7 @@ hamburger
   display: grid;
   place-items: center;
   isolation: isolate;
-  color: #95a6b7;
+  color: #b3bfcb;
   text-transform: capitalize;
   animation: spinner-out 1s ease 4s forwards;
 }
@@ -702,7 +702,7 @@ hamburger
   background: linear-gradient(0deg, #deb86e, #ead2a1);
   background: linear-gradient(#f4f4f4, #fff);
   background: inherit;
-  color: #95a6b7;
+  color: #b3bfcb;
   border-radius: 0;
   transition: 0.2s;
 }
@@ -769,13 +769,13 @@ hamburger
     transition: 0.3s ease letter-spacing;
   }
   .header .navbar #nav .nav-list .links-container ul li a.active {
-    color: #95a6b7;
+    color: #b3bfcb;
   }
   .header .navbar #nav .nav-list .links-container ul li i {
     width: 2.5rem;
     text-align: center;
     padding: 0.5rem;
-    color: #95a6b7;
+    color: #b3bfcb;
   }
   .header .navbar #nav .nav-list .links-container .contact-links {
     background: #29323d;
@@ -799,7 +799,7 @@ hamburger
     margin-right: 0.25rem;
     padding-right: 0.25rem;
     width: 1.5rem;
-    border-right: 1px solid #95a6b7;
+    border-right: 1px solid #b3bfcb;
   }
   .header .navbar #nav .nav-list .links-container.active {
     left: 0;
@@ -857,7 +857,7 @@ hamburger
   }
   .header .navbar #nav .nav-list .links-container.active .contact-links a:hover i {
     transition: 0.25s;
-    color: #95a6b7;
+    color: #b3bfcb;
   }
 }
 .header .navbar #nav .nav-list .links-container .nav-logo {
@@ -910,7 +910,7 @@ hamburger
   background: #1f252d;
 }
 .header .navbar #nav .nav-list ul li:hover a {
-  color: #95a6b7;
+  color: #b3bfcb;
   transition: 0.25s;
 }
 .header .navbar #nav .nav-list ul li:hover a::after {
@@ -918,7 +918,7 @@ hamburger
   letter-spacing: initial;
 }
 .header .navbar #nav .nav-list ul li:hover a i {
-  color: #95a6b7;
+  color: #b3bfcb;
 }
 @media (min-width: 820px) {
   .header .navbar #nav .nav-list {
@@ -957,7 +957,7 @@ hamburger
     transform: translateX(-50%);
     width: 0%;
     height: 2px;
-    background-color: #95a6b7;
+    background-color: #b3bfcb;
     transition: 0.3s ease;
   }
   .header .navbar #nav .nav-list ul li:hover::before {
@@ -978,7 +978,7 @@ hamburger
     display: none;
   }
   .header .navbar #nav .nav-list ul li a.active {
-    color: #95a6b7;
+    color: #b3bfcb;
     transform: scale(1.15);
   }
   .header .navbar #nav .nav-list ul li a.active::before {
@@ -1149,7 +1149,7 @@ hamburger
   font-size: 0.95rem;
   font-size: clamp(.95rem, 2vw, 1.125rem);
   font-weight: 400;
-  color: #95a6b7;
+  color: #b3bfcb;
 }
 .banner .hero .hero-content .hero-title .hero-title-header a {
   color: inherit;
@@ -1207,7 +1207,7 @@ hamburger
   font-size: 1.25rem;
   font-size: clamp(1.25rem, 2.25vw, 1.5rem);
   position: relative;
-  color: #95a6b7;
+  color: #b3bfcb;
   margin-top: 0.5rem;
   font-family: "Montserrat", sans-serif;
 }
@@ -1371,7 +1371,7 @@ hamburger
   }
 }
 .banner .hero .hero-index-content span {
-  color: #95a6b7;
+  color: #b3bfcb;
 }
 .banner .hero .hero-index-content .content-title {
   margin-bottom: 25vh;
@@ -1754,7 +1754,7 @@ hamburger
   position: absolute;
   left: -0.5em;
   bottom: 1em;
-  background-image: radial-gradient(circle at top, #95a6b7, 50%, #000);
+  background-image: radial-gradient(circle at top, #b3bfcb, 50%, #000);
   animation: scene 20s infinite linear reverse;
 }
 @keyframes ball-bounce {
@@ -1818,7 +1818,7 @@ hamburger
   font-size: 0.25em;
   text-transform: uppercase;
   transition: 0.25s;
-  color: #95a6b7;
+  color: #b3bfcb;
   pointer-events: none;
 }
 .cube .left:hover,
@@ -2171,7 +2171,7 @@ hamburger
   color: #f4f4f4;
 }
 .skills-section .skills-content .skills-page-container .skills-bottom .skills-item ul li::marker {
-  color: #95a6b7;
+  color: #b3bfcb;
   color: #fff4;
 }
 .skills-section .skills-content .skills-page-container .skills-bottom .skills-item::after {
@@ -2745,7 +2745,7 @@ hamburger
 }
 .contact .contact-items .contact-item .title h3 {
   color: #f4f4f4;
-  color: #95a6b7;
+  color: #b3bfcb;
   font-size: 0.85rem;
   font-weight: 600;
   position: relative;
@@ -2976,7 +2976,7 @@ hamburger
   font-weight: 500;
   margin: 0.5rem 0;
   text-transform: capitalize;
-  color: #95a6b7;
+  color: #b3bfcb;
   transition: 0.3s;
 }
 @media (min-width: 768px) {
@@ -3039,7 +3039,7 @@ hamburger
   opacity: 0;
 }
 #projects .projects .all-projects .project-item .project-tile .project-info a i {
-  color: #95a6b7;
+  color: #b3bfcb;
   font-size: 0.8rem;
   transition: 0.25s;
   opacity: 0.5;
@@ -3125,7 +3125,7 @@ hamburger
 }
 #projects .projects .all-projects .project-item .tech-list ul li {
   font-size: 0.8em;
-  color: #95a6b7;
+  color: #b3bfcb;
   list-style: none;
   padding: 0.4em 0.3em;
   margin-right: 0.1em;
@@ -3282,7 +3282,7 @@ hamburger
   transition: 0.25s;
 }
 .work .work-container .item .item-header .item-meta-data li:hover {
-  color: #95a6b7;
+  color: #b3bfcb;
 }
 .work .work-container .item .item-header .item-description {
   margin: 1rem 0;
@@ -3621,7 +3621,7 @@ hamburger
   border-radius: 0.25rem;
 }
 .work .work-items .work-item .scroll-snap::-webkit-scrollbar-thumb {
-  background-color: #95a6b7;
+  background-color: #b3bfcb;
   border-radius: 0.25rem;
 }
 .work .work-items .work-item .scroll-snap::-webkit-scrollbar-track {
@@ -3810,7 +3810,7 @@ hamburger
   font-size: 0.6em;
   font-weight: 600;
   text-transform: capitalize;
-  color: #95a6b7;
+  color: #b3bfcb;
   background-color: #dc143c;
   border-radius: 10px;
   transition: 0.5s ease;
@@ -3924,17 +3924,17 @@ hamburger
   padding: 0 0.25rem;
 }
 .about .col-right .article-container article p a.cv:hover {
-  color: #95a6b7;
+  color: #b3bfcb;
 }
 @media (max-width: 820px) {
   .about .col-right .article-container article p a:active {
-    color: #95a6b7;
+    color: #b3bfcb;
     background: #15191e;
   }
 }
 @media (min-width: 820px) {
   .about .col-right .article-container article p a:hover {
-    color: #95a6b7;
+    color: #b3bfcb;
     background: #15191e;
   }
 }
@@ -4167,7 +4167,7 @@ hamburger
   right: 1rem;
   top: 1rem;
   font-size: 4rem;
-  color: #95a6b7;
+  color: #b3bfcb;
   opacity: 0.1;
   transition: 0.25s;
 }
@@ -4191,7 +4191,7 @@ hamburger
   margin-bottom: 0.25rem;
   text-transform: capitalize;
   color: #f4f4f4;
-  color: #95a6b7;
+  color: #b3bfcb;
   font-weight: 400;
   font-family: "Kanit", sans-serif;
   transition: 1s ease;
@@ -4414,7 +4414,7 @@ hamburger
 }
 #footer .footer .footer-bottom .footer-item .footer-list li i {
   width: 1.5rem;
-  color: #95a6b7;
+  color: #b3bfcb;
   transition: 0.25s;
 }
 #footer .footer .footer-bottom .footer-item .footer-list li a {
@@ -4508,7 +4508,7 @@ hamburger
 }
 #footer .footer .brand h2 {
   font-family: "Ubuntu", sans-serif;
-  color: #95a6b7;
+  color: #b3bfcb;
   font-weight: 500;
   font-size: 1.2em;
   letter-spacing: 0.1em;
@@ -4852,7 +4852,7 @@ section .section-title.active-item span {
   display: block;
 }
 #thanks .home-link i {
-  color: #95a6b7;
+  color: #b3bfcb;
   font-size: 1rem;
   margin-right: 0.5rem;
 }
