--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -32,7 +32,7 @@ $light-span: #fff9;
 
 $brand: hsla(0, 0%, 100%, 0.6);
 $brand: #bfbfbf;
-$brand: #95a6b7;
+$brand: hsl(210, 19%, 75%);
 
 $span-brand: #f72751;
 $span-violet: violet;
