--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -217,7 +217,7 @@
                             }
                         }
                         &.cta-secondary {
-                            border: 1px solid $overlay-blue-light;
+                            border: 1px solid $overlay-blue-dark;
                             // font-size: .8rem;
                             // padding: .7rem;
                             // text-decoration: underline;
