--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -140,6 +140,7 @@
                     color: $text-light;
                     background-color: $overlay-blue-dark;
                     background-color: #000;
+                    border: 1px solid #fff4;
                     // background: $overlay-dark;
                     // border: 1px solid #fff2;
                     padding-left: .25rem;
