--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -3,7 +3,7 @@
     // background: #ddd;
     padding: 10vh 5vw 10vh;
     background: $background-light;
-    background: #f4f4f4;
+    background: #fafafa;
     @media (min-width: 768px) {
     padding: 10vh 5vw 10vh;
     }
