--- a/css/style.css
+++ b/css/style.css
@@ -2423,8 +2423,24 @@ hamburger
   margin-top: 1rem;
   padding: 0 1rem;
 }
+.skill-section .skill-section-title ul li {
+  padding-bottom: 0.25rem;
+}
 .skill-section .skill-section-title ul li::marker {
   color: #b3bfcb;
+}
+.skill-section .skill-section-title a {
+  display: flex;
+  justify-content: space-between;
+  text-transform: capitalize;
+  color: #f4f4f4;
+  width: 8rem;
+  width: clamp(10rem, 35vw, 12rem);
+  margin: 1rem 0;
+  padding: 0.8rem 1rem;
+  background: linear-gradient(0deg, #750b20, #dd134c);
+  border-radius: 0.25rem;
+  box-shadow: 0 0.15rem 0.25rem rgba(219, 20, 60, 0.1), 0 0.5rem 0.5rem rgba(0, 0, 0, 0.2);
 }
 .skill-section .skill-section-title img {
   position: absolute;
@@ -2477,7 +2493,7 @@ hamburger
   object-position: 50% 5%;
   object-fit: cover;
   mix-blend-mode: overlay;
-  opacity: 0.9;
+  opacity: 0.7;
 }
 @media (min-width: 768px) {
   .skill-section .skill-section-title.section-title-2 img {
