--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -733,7 +733,7 @@
                 }
             }
         }
-        a {
+        .button {
             display: flex;
             justify-content: space-between;
             text-transform: capitalize;
@@ -742,13 +742,19 @@
             width: clamp(10rem, 35vw, 12rem);
             margin: 1rem 0;
             padding: .8rem 1rem;
-            background: $button-crimson;
             border-radius: .25rem;
             box-shadow: 0 .15rem .25rem hsla(348, 83%, 47%, .1) , 0 .5rem .5rem rgba(0, 0, 0, .2);
 
-            // position: absolute;
-            // bottom: 10vh;
-            // left: 5vw;
+            &.button-dark {
+                background: linear-gradient(0deg, #ddd, #fff);
+                color: $overlay-blue-darker;
+                font-weight: 600;
+            }
+            &.button-light {
+                background: linear-gradient(0deg, $overlay-blue-darkest, $overlay-blue-light);
+                color: $text-light;
+                font-weight: 600;
+            }
         }
         img {
             // border: 2px solid red;
