--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -745,7 +745,7 @@
             margin: 1rem 0;
             padding: .8rem 1rem;
             border-radius: .25rem;
-            box-shadow: 0 .15rem .25rem hsla(348, 83%, 47%, .1) , 0 .5rem .5rem rgba(0, 0, 0, .2);
+            box-shadow: 0 .5rem .5rem rgba(0, 0, 0, .2);
 
             &.button-dark {
                 background: linear-gradient(0deg, #ddd, #fff);
