--- a/css/style.css
+++ b/css/style.css
@@ -689,9 +689,8 @@ hamburger
   font-weight: 400;
   text-transform: capitalize;
   color: #f4f4f4;
-  background-color: #29323d;
-  background-color: #000;
-  border: 1px solid #fff4;
+  background-color: #15191e;
+  border: 1px solid rgba(179, 191, 203, 0.5);
   padding-left: 0.25rem;
   padding-block: 0.15rem;
   border-radius: 0.25rem;
