--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -33,6 +33,7 @@ $light-span: #fff9;
 $brand: hsla(0, 0%, 100%, 0.6);
 $brand: #bfbfbf;
 $brand: hsl(210, 19%, 75%);
+$brand-border: hsla(210, 19%, 75%, .5);
 
 $span-brand: #f72751;
 $span-violet: violet;
