--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -753,7 +753,7 @@
                 font-weight: 600;
             }
             &.button-light {
-                background: linear-gradient(0deg, $overlay-blue-darkest, $overlay-blue-light);
+                background: red;
                 color: $text-light;
                 font-weight: 600;
                 border: 1px solid $overlay-blue-darker;
