--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -753,7 +753,7 @@
                 font-weight: 600;
             }
             &.button-light {
-                background: red;
+                background: $overlay-btn;
                 color: $text-light;
                 font-weight: 600;
                 border: 1px solid $overlay-blue-darker;
