--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -735,29 +735,21 @@
                 }
             }
         }
-        .button {
-            display: flex;
-            justify-content: space-between;
-            text-transform: capitalize;
-            color: $text-light;
-            width: 8rem;
-            width: clamp(10rem, 35vw, 12rem);
-            margin: 1rem 0;
-            padding: .8rem 1rem;
-            border-radius: .25rem;
-            box-shadow: 0 .5rem .5rem rgba(0, 0, 0, .2);
+        .btn {
+            margin-top: 1rem;
+            width: 10rem;
+            font-weight: 600;
+            // display: flex;
+            // justify-content: space-between;
+            // text-transform: capitalize;
+            // color: $text-light;
+            // width: 8rem;
+            // width: clamp(10rem, 35vw, 12rem);
+            // margin: 1rem 0;
+            // padding: .8rem 1rem;
+            // border-radius: .25rem;
+            // box-shadow: 0 .5rem .5rem rgba(0, 0, 0, .2);
 
-            &.button-dark {
-                background: linear-gradient(0deg, #ddd, #fff);
-                color: $overlay-blue-darker;
-                font-weight: 600;
-            }
-            &.button-light {
-                background: $overlay-btn;
-                color: $text-light;
-                font-weight: 600;
-                border: 1px solid $overlay-blue-darker;
-            }
         }
         img {
             // border: 2px solid red;
