--- a/css/style.css
+++ b/css/style.css
@@ -279,7 +279,7 @@ hamburger
 
 .btn {
   border: 2px solid #000;
-  padding: 0.65rem 1rem;
+  padding: 0.8rem 1rem;
   border: none;
   border-radius: 0.25rem;
   text-align: center;
@@ -288,7 +288,7 @@ hamburger
   text-transform: capitalize;
   isolation: isolate;
   position: relative;
-  width: max-content;
+  min-width: 10rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -2491,7 +2491,7 @@ hamburger
 }
 @media (min-width: 768px) {
   .skill-section .skill-section-title.section-title-1 {
-    height: 90vh;
+    height: 95vh;
   }
   .skill-section .skill-section-title.section-title-1::after {
     background-image: url("../img/sergi-kabrera-2xU7rYxsTiM-unsplash.jpg");
