--- a/sass/_utilities.scss
+++ b/sass/_utilities.scss
@@ -319,7 +319,7 @@ hamburger
 // CTA BUTTONS
 .btn {
     border: 2px solid #000;
-    padding: .65rem 1rem;
+    padding: .8rem 1rem;
     border: none;
     border-radius: .25rem;
     text-align: center;
@@ -328,7 +328,8 @@ hamburger
     text-transform: capitalize;
     isolation: isolate;
     position: relative;
-    width: max-content;
+    // width: max-content;
+    min-width: 10rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
