--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -286,17 +286,6 @@
                             display: block;
                         }
                     }
-
-                    &.io-item {
-                        opacity: 0;
-                        transform: translateY(5vh);
-                        transition: 1s;
-                        
-                    }
-                    &.active-item {
-                        opacity: 1;
-                        transform: translateY(0);
-                    }
                 }
             }
 
@@ -351,33 +340,37 @@
             // overflow: hidden;
             
             img {
-            // border: 2px solid red;
+            // border: 2px solid $overlay-blue-light;
                 // display: none;
                 width: 100%;
-                // height: 40vh;
+                height: 100%;
                 border-radius: .25rem;
-                object-fit: contain;
+                object-fit: cover;
                 @include sm {
-                    width: 50vh;
+                    object-fit: contain;
+                }
+                @include md {
+                    object-fit: cover;
+                    width: 20rem;
                 }
             }
         // image hover states
-        &:hover {
-            &::before {
-                opacity: 0;
-                transform: scale(1.1);
-                transform-origin: left;
-            }
-            &::after {
-                opacity: 1;
-            }
-        }
+        // &:hover {
+        //     &::before {
+        //         opacity: 1;
+        //         transform: scale(1.1);
+        //         transform-origin: left;
+        //     }
+        //     &::after {
+        //         opacity: 0;
+        //     }
+        // }
         // end of image hover states
 
         &.animated-img {
             // border: 2px solid red;
             img {
-                display: none;
+                opacity: 0;
             }
             &::before,
             &::after {
