--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -5,8 +5,6 @@
     display: flex;
     flex-direction: column-reverse;
     gap: 5vh;
-    text-align: center;
-    margin: 0 auto ;
     padding: 10vh 5vw;
     background-color: $background-light;
     position: relative;
@@ -171,90 +169,139 @@
             // overflow: hidden;
             article {
                 // ABOUT P
-                p {
-                    // border: 2px solid red;
-                    font-weight: 500;
-                    text-align: left;
-                    font-size: 1rem;
-                    line-height: 1.5;
-                    transition: 1.5s;
-                    
-
-                    @include md {
-                        .title-break {
-                            display: none;
-                        }
-                    }
-                    .item-title{
-                        font-weight: 600;
-                        color: $overlay-blue-darker;
-                        display: block;
-                    }
-
-                    a {
-                        background-color: #f4f4f4;
-                        color: $overlay-blue-darker;
-                        font-weight: 500;
-                        display: inline-block;
-                        width: max-content;
-                        border-radius: .25rem;
-                        transition: .2s;
-
-                        &.cv {
-                            background-color: $overlay-blue-darker;
-                            color: $text-light;
-                            padding: 0 .25rem;
-                            &:hover {
-                                color: $brand;
-                            }
-                        }
-                        @media (max-width: 820px){
-                            &:active {
-                                color: $brand;
-                                background: $overlay-blue-darkest;
-                            }
-                        }
-                        @media (min-width: 820px){
-                            &:hover {
-                                color: $brand;
-                                background: $overlay-blue-darkest;
-                            }
-                        }
-                    }
-                    // CAPITAL B FIRST LETTER
-                    &.intro {
-                        font-weight: 500;
-
-                        &.intro::first-letter {
-                            font-size: 2rem;
-                            font-size: clamp(2rem, 5vw, 2.25rem);
-                            float: left;
-                            background: $overlay-blue-darker;
-                            color: $text-light;
-                            padding: 0 .1em;
-                            margin-right: .1em;
-                            border-radius: .25rem;
-                            box-shadow: 3px 3px 0 rgba(0, 0, 0, .100);
-                        }
-                    }
-                    
-                    i {
-                        // position: absolute;
-                        font-size: 2rem;
-                        color: $overlay-blue-light;
-                        margin-right: .05rem;
-                        display: block;
-                        margin-bottom: .5rem;
-                        @include md {
-                            font-size: 2rem;
-                        }
-                    }
-
-
-                }
                 .about-intro {
-                    
+                    // border: 2px solid red;
+                    p {
+                        // border: 2px solid red;
+                        font-weight: 500;
+                        text-align: left;
+                        font-size: 1rem;
+                        line-height: 1.5;
+                        transition: 1.5s;
+                        
+    
+                        @include md {
+                            .title-break {
+                                display: none;
+                            }
+                        }
+                        .item-title{
+                            font-weight: 600;
+                            color: $overlay-blue-darker;
+                            display: block;
+                        }
+    
+                        a {
+                            background-color: #f4f4f4;
+                            color: $overlay-blue-darker;
+                            font-weight: 500;
+                            display: inline-block;
+                            width: max-content;
+                            border-radius: .25rem;
+                            transition: .2s;
+    
+                            &.cv {
+                                background-color: $overlay-blue-darker;
+                                color: $text-light;
+                                padding: 0 .25rem;
+                                &:hover {
+                                    color: $brand;
+                                }
+                            }
+                            @media (max-width: 820px){
+                                &:active {
+                                    color: $brand;
+                                    background: $overlay-blue-darkest;
+                                }
+                            }
+                            @media (min-width: 820px){
+                                &:hover {
+                                    color: $brand;
+                                    background: $overlay-blue-darkest;
+                                }
+                            }
+                        }
+                        // CAPITAL B FIRST LETTER
+                        &.intro {
+                            font-weight: 500;
+    
+                            &.intro::first-letter {
+                                font-size: 2rem;
+                                font-size: clamp(2rem, 5vw, 2.25rem);
+                                float: left;
+                                background: $overlay-blue-darker;
+                                color: $text-light;
+                                padding: 0 .1em;
+                                margin-right: .1em;
+                                border-radius: .25rem;
+                                box-shadow: 3px 3px 0 rgba(0, 0, 0, .100);
+                            }
+                        }
+                        
+                        i {
+                            // position: absolute;
+                            font-size: 2rem;
+                            color: $overlay-blue-light;
+                            margin-right: .05rem;
+                            display: block;
+                            margin-bottom: .5rem;
+                            @include md {
+                                font-size: 2rem;
+                            }
+                        }
+                        
+                    }
                 }
+
+                .buttons-container {
+                    // border: 2px solid blue;
+                    padding: 0;
+                    margin: 1rem 0;
+                }
+
+                .article-body {
+                    // border: 2px solid purple;
+                    color: $overlay-blue-darker;
+                    margin-top: 5vh;
+                    
+                    .body-item {
+                        // border: 2px solid yellow;
+                        padding-bottom: .5rem;
+                        margin-bottom: 5vh;
+                        position: relative;
+                        i {
+                            font-size: 2rem;
+                            margin-bottom: .25rem;
+                        }
+                        .body-item-title {
+                            margin-bottom: .5rem;
+                        }
+                        a {
+                            color: inherit;
+                            &:hover {
+                                color: $span-crimson;
+                            }
+                        }
+                        // ITEM BOTTOM BORDER
+                        &::after {
+                            content: '';
+                            position: absolute;
+                            bottom: 0;
+                            left: 0;
+                            width: 100%;
+                            border-radius: .5rem;
+                            height: .1rem;
+                            opacity: .4;
+                            background: linear-gradient(90deg, #f4f4f4, $overlay-blue-light, #f4f4f4);
+                            background: linear-gradient(90deg, $overlay-blue-light, #f4f4f4);
+                            @include md {
+                            }
+                        }
+                    }
+                }
+
+                
+
                 .about-body {
                     // border: 2px solid blue;
                     margin-top: 5vh;
@@ -276,7 +323,6 @@
                             background: linear-gradient(90deg, #f4f4f4, $overlay-blue-light, #f4f4f4);
                             @include md {
                                 background: linear-gradient(90deg, $overlay-blue-light, #f4f4f4);
-
                             }
                         }
 
